# iw

./: diff.py  pyproject.toml  script.py  train.py  train_pair_hyp_maze.py  train_pairs.py  train_pairs_hyperbolic.py  train_pairs_non_normalize.py  vis.ipynb
configs/: tree.yaml
envs/: tree.py
project/: config.py  main.py
project/envs/: tree.py
project/networks/: encoder.py
project/utils/: data_utils.py  evaluation.py  plotting.py  training.py
