[tool.poetry]
name = "hyperbolic"
version = "0.1.0"
description = ""
authors = ["eugenechoi2004 <35019459+eugenechoi2004@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
