[tool.poetry]
name = "hyperbolic"
version = "0.1.0"
description = ""
authors = ["eugenechoi2004 <35019459+eugenechoi2004@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
graphviz = "^0.20.3"
ipython = "^8.30.0"
networkx = "^3.4.2"
matplotlib = "^3.9.3"
torch = "^2.5.1"
ipykernel = "^6.29.5"
hypll = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
